fixed menu icon alignment issue

--- a/nav-bar/nav-bar.css
+++ b/nav-bar/nav-bar.css
@@ -105,7 +105,7 @@
 	width: 50px;
 	cursor: pointer;
 	position: relative;
-	display: inline-block;
+	display: block;
 }
 .nav-icon {
 	width: 100%;
